--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
 theme: jekyll-theme-minimal
+title: Actually Agile Competencies
+description: A repository of progressive competencies for every area of the agile software development life-cycle. 
+logo: https://media.badgr.com/uploads/issuers/issuer_logo_9049e832-9a49-4955-b510-80475a2a42d9.png
+show_downloads: false
